# The-James-Bridge

./: .env.example  .gitignore  API.md  CHANGELOG.md  Dockerfile  GITHUB_SETUP.md  MASTER_PLAN.md  README.md  SETUP.md  VISION.md  eslint.config.js  evolver.py  extract_nb.py  extracted_notebook.md  iteration_0.01.txt  neurobridge.config.yaml  neurobridge.evolved.yaml  neurobridge.ipynb  neurobridge.py  neurobridge_py.ipynb  package-lock.json  package.json  production_train.py  pyproject.toml  requirements.txt  run_evolution.py  run_neurobridge.sh  tailwind.config.ts  tmp_commit.md  verify.py  vite.config.ts
.github/workflows/: bci-pipeline.yml
.jules/: bolt.md
.omg/: architecture.md  plan.md  prd.md  state.json  synthesis.md
neurobridge/: __init__.py  api.py  cli.py  config.py  data.py  data_pipeline.py  evaluate.py  evolve.py  inference.py  mock_data.py  models.py  synthesizer.py  train.py  training.py
neurobridge/actuation/: interface.py
neurobridge/api/: __init__.py  server.py
neurobridge/data/: __init__.py  alignment.py  download_openneuro.py  ingestion.py
neurobridge/model/: __init__.py  decoder.py  losses.py  test_architectures.py
neurobridge/processing/: artifacts.py  signal.py
neurobridge/training/: __init__.py  trainer.py  tuner.py
neurobridge/utils/: __init__.py  synthesize_edf_tester.py
sample_data/: clinical_validation_sample.edf
src/components/ui/: badge.tsx  button.tsx  (+3 more)
src/lib/: api-client.ts  api.ts  ui-variants.ts
src/pages/: Index.tsx
tests/: benchmark_latency.py  conftest.py  test_actuation_end_to_end.py  test_api.py  test_core.py  test_data.py  test_data_pipeline.py  test_extra.py  test_interface.py  test_model.py  test_models.py  test_synthesis.py
(+4 files in other folders)
